# bb-crypto-inventory

./: .gitignore  LICENSE  README.md  bbci-tui.py  bbci.yaml.example  pyproject.toml
benchmarks/: README.md  __init__.py  docker-compose.yaml  ground_truth.yaml  phase01-report.schema.json  phase01-scoring-spec.md  phase01-spec.md  phase02-report.schema.json  phase02-scoring-spec.md  phase02-spec.md  phase03-report.schema.json  phase03-scoring-spec.md  phase03-spec.md  phase04-report.schema.json  phase04-scoring-spec.md  phase04-spec.md  phase05-report.schema.json  phase05-scoring-spec.md  phase05-spec.md  runner.py  scoring.py  test_servers.py
benchmarks/nginx/: generate-certs.sh  nginx-strong.conf  nginx-weak.conf
benchmarks/nginx/certs/: dhparam-weak.pem  strong-server.crt  strong-server.key  weak-server.crt  weak-server.key
benchmarks/servers/: Dockerfile  requirements.txt  vulnerable_app.py
benchmarks/servers/expanded/: README.md
docs/: 01-background.md  02-sota-survey.md  03-llm-approaches.md  04-design.md  05-benchmarks.md  06-references.md  07-small-sample-randomness.md
prompts/: phase0-recon.md  phase1-tls.md  phase2-app.md  phase3-oracle.md  summarize.md  system.md
src/bbci/: __init__.py  cli.py  config.py  phase01.py  phase02.py  phase03.py  phase04.py  phase05.py
src/bbci/agent/: __init__.py  orchestrator.py  prompts.py
tests/: __init__.py  test_application.py  test_config.py  test_models.py  test_phase01.py  test_phase02.py  test_phase03.py  test_phase04.py  test_phase05.py  test_randomness.py
tools/: app.py  oracle.py  recon.py  tls.py
(+17 files in other folders)
